--- a/src/components/Layout/Menu/Menu.css
+++ b/src/components/Layout/Menu/Menu.css
@@ -1,3 +1,7 @@
+.custom-nav {
+  z-index: 991;
+}
+
 .custom-nav .bg-dark {
   background: #37b34a !important;
 }
@@ -5,12 +9,134 @@
 .custom-nav .justify-content-center {
   background: #fff;
   border-bottom: 1px solid #dedede;
+  width: 100%;
+}
+
+.custom-nav .navbar.navbar-expand-sm {
+  padding: 0;
+  flex-flow: wrap;
+}
+
+.custom-nav .navbar .container {
+  padding: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.navbar-collapse {
+  position: absolute;
+  width: 100%;
+  top: 82px;
+}
+
+.navbar-toggler {
+  padding: 0;
+  border: 0;
+}
+
+@media (min-width: 576px) {
+  .custom-nav .navbar .container {
+    padding: 5px 0;
+  }
+
+  .navbar-collapse {
+    position: unset;
+    top: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .custom-nav .navbar .container .left-button {
+    margin-right: 107px !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .custom-nav .navbar .container .left-button {
+    margin-right: 190px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+}
+
+.nav-link {
+  vertical-align: middle;
+  text-align: left;
+  width: 180px;
+  margin: auto;
 }
 
 .menu-item {
-  border-right: 1px solid #dedede;
+  padding: 5px;
+  text-align: center;
 }
 
-.menu-item:last-child {
+.menu-buttons {
+  text-align: center;
+  padding: 5px;
+  padding-bottom: 10px;
+}
+
+.menu-item:nth-last-child(2) {
   border-right: 0;
+}
+
+.menu-item span {
+  display: inline-block;
+  font-size: 14px;
+  vertical-align: middle;
+  font-weight: 900;
+  color: #000;
+}
+
+@media (min-width: 576px) {
+  .nav-link {
+    display: table-cell;
+    text-align: center;
+    width: 160px;
+    height: 60px;
+  }
+
+  .menu-item {
+    padding: 0px;
+    border-right: 1px solid #dedede;
+  }
+
+  .menu-item span {
+    width: 60px;
+  }
+
+  .nav-link:focus,
+  .nav-link:hover {
+    border-bottom: 2px solid #37b34a;
+  }
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #00000080;
+  cursor: auto;
+  opacity: 0;
+  z-index: -1;
+}
+
+.overlay.show {
+  z-index: 990;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.overlay.hidden {
+  z-index: -1;
+  cursor: auto;
+  opacity: 0;
+}
+
+@media (min-width: 576px) {
+  .overlay {
+    display: none !important;
+  }
 }
