--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -5,3 +5,13 @@ html,
   background: #f6f6f6;
   font-family: "Montserrat", sans-serif;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-transition: all 100ms ease;
+  -moz-transition: all 100ms ease;
+  -ms-transition: all 100ms ease;
+  -o-transition: all 100ms ease;
+  transition: all 100ms ease;
+}
