--- a/src/components/Layout/Menu/Menu.css
+++ b/src/components/Layout/Menu/Menu.css
@@ -23,11 +23,11 @@
   padding-bottom: 5px;
 }
 
-.navbar-collapse {
+/* .navbar-collapse {
   position: absolute;
   width: 100%;
   top: 82px;
-}
+} */
 
 .navbar-toggler {
   padding: 0;
@@ -86,7 +86,7 @@
   display: inline-block;
   font-size: 14px;
   vertical-align: middle;
-  font-weight: 900;
+  font-weight: 700;
   color: #000;
 }
 
