--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,41 @@
 .card {
   margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.card-img,
+.card-img-top {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.card-title {
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.card-subtitle,
+.card-time {
+  font-weight: 700;
+  font-size: 14px;
+  color: #777;
+}
+
+.card-time {
+  color: #37b34a;
+}
+
+.card-text {
+  color: #777;
+}
+
+.card-link {
+  color: #37b34a;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.card-link:hover {
+  text-decoration: underline;
+  color: #22752e;
 }
